add pitch - cradle focused

--- a/keboon-pitch.html
+++ b/keboon-pitch.html
@@ -113,6 +113,17 @@
             font-size: 1.2em;
             font-weight: bold;
         }
+        .story-section {
+            background-color: #e6f3ed;
+            border-left: 5px solid var(--primary-color);
+            padding: 15px;
+            margin: 20px 0;
+            border-radius: 0 10px 10px 0;
+        }
+        .story-section h3 {
+            color: var(--primary-color);
+            margin-top: 0;
+        }
         @media (max-width: 768px) {
             .card {
                 flex: 1 1 100%;
@@ -146,6 +157,10 @@
                 <p>Create a platform where local producers can sell their surplus, ensuring no produce goes to waste and promoting local, organic food consumption.</p>
             </div>
         </div>
+        <div class="story-section">
+            <h3>Meet Sarah: A Typical Home Gardener</h3>
+            <p>Sarah loves gardening and often finds herself with an abundance of tomatoes and cucumbers. She used to give them away to neighbors, but it became time-consuming to coordinate. Sometimes, her excess produce would end up in the compost bin. Sarah wishes there was an easy way to share her harvest with her community and maybe earn a little extra income.</p>
+        </div>
     </div>
 
     <div class="section">
@@ -164,6 +179,10 @@
                 <div class="feature-icon">🤝</div>
                 <p>Connect with local community</p>
             </div>
+        </div>
+        <div class="story-section">
+            <h3>How Keboon Helps Sarah</h3>
+            <p>With Keboon, Sarah can easily list her extra tomatoes and cucumbers on the app. Her neighbors can see what's available nearby and purchase directly from her. Sarah reduces waste, earns some money, and connects with her community. Meanwhile, her neighbors get fresh, locally-grown produce at great prices.</p>
         </div>
     </div>
 
@@ -256,6 +275,60 @@
         <div class="chart-container">
             <canvas id="salesTargetChart"></canvas>
         </div>
+        <div class="table-container">
+            <h3>Detailed Sales Target Breakdown</h3>
+            <table>
+                <tr>
+                    <th>Year</th>
+                    <th>Users</th>
+                    <th>Average Transaction</th>
+                    <th>Transactions per User</th>
+                    <th>Transaction Fee</th>
+                    <th>Pro Plan Subscribers</th>
+                    <th>Pro Plan Fee</th>
+                    <th>Total Revenue</th>
+                </tr>
+                <tr>
+                    <td>Year 1</td>
+                    <td>50,000</td>
+                    <td>RM50</td>
+                    <td>10</td>
+                    <td>RM0.50</td>
+                    <td>2,500 (5%)</td>
+                    <td>RM50/year</td>
+                    <td>RM375,000</td>
+                </tr>
+                <tr>
+                    <td>Year 2</td>
+                    <td>100,000</td>
+                    <td>RM50</td>
+                    <td>10</td>
+                    <td>RM1.00</td>
+                    <td>5,000 (5%)</td>
+                    <td>RM50/year</td>
+                    <td>RM1,250,000</td>
+                </tr>
+            </table>
+        </div>
+        <div class="story-section">
+            <h3>How We Plan to Achieve These Targets</h3>
+            <h4>Year 1 Strategy:</h4>
+            <ul>
+                <li>Focus on user acquisition through targeted marketing campaigns</li>
+                <li>Implement a referral program to encourage organic growth</li>
+                <li>Partner with local community gardens and urban farming initiatives</li>
+                <li>Offer promotional rates to early adopters</li>
+                <li>Continuously gather and implement user feedback to improve the platform</li>
+            </ul>
+            <h4>Year 2 Strategy:</h4>
+            <ul>
+                <li>Expand marketing efforts to reach a broader audience</li>
+                <li>Introduce the Pro Plan with advanced features to incentivize upgrades</li>
+                <li>Develop partnerships with environmental organizations and local governments</li>
+                <li>Implement a loyalty program to increase user retention and transaction frequency</li>
+                <li>Explore B2B opportunities to diversify revenue streams</li>
+            </ul>
+        </div>
     </div>
 
     <div class="section">
@@ -305,6 +378,54 @@
                     <li>Continuous innovation</li>
                 </ul>
             </div>
+        </div>
+    </div>
+
+    <div class="section">
+        <h2>Funding Request from Cradle</h2>
+        <div class="table-container">
+            <table>
+                <tr>
+                    <th>Category</th>
+                    <th>Amount (RM)</th>
+                </tr>
+                <tr>
+                    <td>Software Development</td>
+                    <td>60,000</td>
+                </tr>
+                <tr>
+                    <td>UI/UX Design</td>
+                    <td>20,000</td>
+                </tr>
+                <tr>
+                    <td>Server and Infrastructure</td>
+                    <td>15,000</td>
+                </tr>
+                <tr>
+                    <td>Marketing and User Acquisition</td>
+                    <td>25,000</td>
+                </tr>
+                <tr>
+                    <td>Legal and Compliance</td>
+                    <td>10,000</td>
+                </tr>
+                <tr>
+                    <td>Market Research and Testing</td>
+                    <td>15,000</td>
+                </tr>
+                <tr>
+                    <td>Contingency Fund</td>
+                    <td>5,000</td>
+                </tr>
+                <tr>
+                    <th>Total Funding Requested</th>
+                    <th>150,000</th>
+                </tr>
+            </table>
+        </div>
+        <div class="story-section">
+            <h3>Funding Allocation and Strategy</h3>
+            <p>This funding will cover the development of our MVP, initial market launch, and operations for the first 12 months. The allocation prioritizes core technology development while ensuring adequate resources for user acquisition and market validation. The requested amount maximizes the available funding from Cradle to accelerate Keboon's development and market entry, setting a strong foundation for future growth and potential additional funding rounds.</p>
         </div>
     </div>
 
