--- a/index.html
+++ b/index.html
@@ -41,6 +41,11 @@
                     <div class="masthead-subheading">Welcome to Keboon!</div>
                     <div class="masthead-heading">Connecting Neighbours, <br>Sharing Freshness</div>
                     <p class="masthead-description">Join our community of local producers and consumers to reduce food waste and enjoy fresh, local produce.</p>
+                    <div class="text-center">
+                        <a href="https://app.keboon.net" target="_blank" rel="noopener noreferrer" class="btn btn-primary btn-s text-uppercase">
+                            Try Our App Now!
+                        </a>
+                    </div>
                 </div>
             </div>
         </div>
