add button to app

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                     <p class="masthead-description">Join our community of local producers and consumers to reduce food waste and enjoy fresh, local produce.</p>
                     <div class="text-center">
                         <a href="https://app.keboon.net" target="_blank" rel="noopener noreferrer" class="btn btn-primary btn-s text-uppercase">
-                            Try Our App Now!
+                            Try Keboon App Now!
                         </a>
                     </div>
                 </div>
