--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                     <li class="nav-item"><a class="nav-link" href="#survey">Survey</a></li>
                     <!-- <li class="nav-item"><a class="nav-link" href="#pitch">Pitch Deck</a></li> -->
                     <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
-                    <li class="nav-item"><a class="nav-link" href="https://app.keboon.net/installation">Download Keboon App</a></li>
+                    <li class="nav-item"><a class="nav-link" href="https://app.keboon.net/installation">Install Keboon App</a></li>
                 </ul>
             </div>
         </div>
@@ -43,7 +43,7 @@
                     <p class="masthead-description">Join our community of local producers and consumers to reduce food waste and enjoy fresh, local produce.</p>
                     <div class="text-center">
                         <a href="https://app.keboon.net/installation" target="_blank" rel="noopener noreferrer" class="btn btn-primary btn-s text-uppercase">
-                            Download Keboon App Now!
+                            Install Keboon App Now!
                         </a>
                     </div>
                 </div>
