--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
                             <div class="team-member">
                                 <img class="mx-auto rounded-circle" src="assets/img/team/aimi_misman.jpg" alt="Aimi Misman" />
                                 <h5>Aimi Misman</h5>
-                                <p class="text-muted">Founder & CTO</p>
+                                <p class="text-muted">Founder</p>
                                 <p>A passionate advocate for sustainable living and local economies, Aimi is the driving force behind Keboon, a platform dedicated to connecting home growers and producers with their neighbors and consumers. With a deep commitment to leveraging technology for social good, she envisions a world where communities thrive through access to fresh, locally-sourced produce, reducing carbon footprints, and fostering resilience in local economies. As a visionary technology leader, she combines her expertise in software development, project management, and business strategy to turn this vision into reality. She is skilled in guiding cross-functional teams and integrating innovative solutions that align with Keboon's mission. Her work is not just about creating software—it's about making a lasting, positive impact on how people connect, consume, and support their local communities. She believes that through technology, we can empower individuals to contribute to a healthier planet and a more connected society.</p>
                             </div>
                         </div>
