--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                     <li class="nav-item"><a class="nav-link" href="#survey">Survey</a></li>
                     <!-- <li class="nav-item"><a class="nav-link" href="#pitch">Pitch Deck</a></li> -->
                     <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
-                    <li class="nav-item"><a class="nav-link" href="https://app.keboon.net/installation">Install Keboon App</a></li>
+                    <li class="nav-item"><a class="nav-link" href="https://app.keboon.net/">Keboon App</a></li>
                 </ul>
             </div>
         </div>
