--- a/index.html
+++ b/index.html
@@ -238,9 +238,9 @@
                                 <!-- Instagram embed code -->
                                 <script async defer src="https://www.instagram.com/embed.js"></script>
                                 <blockquote class="instagram-media"
-                                    data-instgrm-permalink="https://www.instagram.com/keboon.tech/"
+                                    data-instgrm-permalink="https://www.instagram.com/keboonmy/"
                                     data-instgrm-version="14" style="max-width:100%; width:100%">
-                                    <a href="https://www.instagram.com/keboon.tech/"></a>
+                                    <a href="https://www.instagram.com/keboonmy/"></a>
                                 </blockquote>
                             </div>
                         </div>
@@ -402,7 +402,7 @@
                     Business RN: 003639101-D
                 </div>
                 <div class="col-lg-4 d-flex justify-content-center mb-3 mb-lg-0">
-                    <a class="btn btn-dark btn-social mx-2" href="https://instagram.com/keboon.tech"
+                    <a class="btn btn-dark btn-social mx-2" href="https://instagram.com/keboonmy"
                         aria-label="Keboon Instagram Profile" target="_blank" rel="noopener noreferrer"><i
                             class="fab fa-instagram"></i></a>
                     <a class="btn btn-dark btn-social mx-2" href="https://facebook.com/keboon.tech"
