--- a/index.html
+++ b/index.html
@@ -322,7 +322,7 @@
                                     alt="Aimi Misman" />
                                 <h5>Aimi Misman</h5>
                                 <p class="text-muted">Founder</p>
-                                <p>A passionate advocate for sustainable living and local economies, Aimi is the driving
+                                <p style="text-align: justify;">A passionate advocate for sustainable living and local economies, Aimi is the driving
                                     force behind Keboon, a platform dedicated to connecting home growers and producers
                                     with their neighbors and consumers. With a deep commitment to leveraging technology
                                     for social good, she envisions a world where communities thrive through access to
@@ -343,15 +343,11 @@
                                     alt="Sherman Foo" />
                                 <h5>Sherman Foo</h5>
                                 <p class="text-muted">Advisor</p>
-                                <p>Since 2007, Sherman transitioned from a regional MNC role to the startup scene,
-                                    co-founding a now globally recognized portable audio innovation. This bootstrap
-                                    venture reached $30 million in revenue and a presence in over 100 countries within
-                                    four years, later valued at $1 billion by Forbes. He has since won numerous awards
-                                    and achieved success as a managing partner at several agencies, published author,
-                                    venture capitalist, restauranteur, regional consultant, business advisor, and
-                                    speaker. Since 2016, Sherman has also served on the boards of various ventures
-                                    across industries such as investments, IPO development, e-commerce, consumer
-                                    services, digital tech, and F&B.</p>
+                                <p style="text-align: justify;">Since 2007, Sherman has transitioned from a regional MNC role into the startup ecosystem, co-founding a globally recognized portable audio innovation that grew from a bootstrap venture to $30 million in revenue, with a presence in over 100 countries. Forbes later valued the company at $1 billion. Over the years, Sherman has become a seasoned entrepreneur and managing partner across multiple industries, including digital tech and e-commerce.
+
+                                    With his expertise in scaling ventures, Sherman has guided companies through various stages of growth, IPO development, and digital transformation. His experience spans consumer services, F&B, and tech, positioning him as an ideal advisor for Keboon’s marketplace, which aims to connect local home growers with nearby consumers. Since 2016, he has been a trusted board member for multiple ventures, and as a published author and business consultant, Sherman brings invaluable insights to help Keboon grow, particularly in fostering community-driven economies and supporting local producers.
+                                    
+                                    Sherman’s entrepreneurial track record, award-winning strategies, and involvement with digital platforms make him a key asset in scaling Keboon into a transformative marketplace for local and sustainable agriculture.</p>
                             </div>
                         </div>
                     </div>
