--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <div class="container">
             <div class="card bg-transparent border-0">
                 <div class="card-body text-center">
-                    <div class="masthead-subheading">Welcome to Keboon!</div>
+                    <img src="/keboon-website/assets/img/keboon-logo-white.png" alt="Keboon" class="logo-image" style="width: 250px; height: auto; vertical-align: middle";>
                     <div class="masthead-heading">Connecting Neighbours, <br>Sharing Freshness</div>
                     <p class="masthead-description">Join our community of local producers and consumers to reduce food
                         waste and enjoy fresh, local produce.</p>
@@ -62,7 +62,11 @@
             <div class="card shadow">
                 <div class="card-body">
                     <div class="text-center">
-                        <h3 class="section-heading text-uppercase">About Keboon</h3>
+                        <h3 class="section-heading text-uppercase">
+                            About <br>
+                            <img src="/keboon-website/assets/img/keboon-writing.png" alt="Keboon" class="logo-image" style="width: 120px; height: auto; vertical-align: middle";>
+                          </h3>
+                          
                         <h3 class="section-subheading text-muted">Keboon is An innovative online marketplace connecting
                             local producers with consumers, reducing food waste and promoting sustainable local food
                             ecosystems.</h3>
@@ -123,7 +127,7 @@
                         </li>
                         <li class="timeline-inverted">
                             <div class="timeline-image"><img class="rounded-circle img-fluid"
-                                    src="assets/img/about/2.jpg" alt="Solution" /></div>
+                                    src="assets/img/keboon-logo-2.png" alt="Solution" /></div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
                                     <h3>Our Solution</h3>
