--- a/index.html
+++ b/index.html
@@ -319,13 +319,13 @@
                         <h3 class="section-heading text-uppercase">Our Team</h3>
                         <h3 class="section-subheading text-muted">The minds behind Keboon</h3>
                     </div>
-                    <div class="row">
-                        <div class="col-lg-6">
+                    <div class="row justify-content-center">
+                        <div class="col-lg-8">
                             <div class="team-member">
                                 <img class="mx-auto rounded-circle" src="assets/img/team/aimi_misman.jpg"
                                     alt="Aimi Misman" />
                                 <h5>Aimi Misman</h5>
-                                <p class="text-muted">Founder</p>
+                                <p class="text-muted">Founder, CEO</p>
                                 <p style="text-align: justify;">A passionate advocate for sustainable living and local economies, Aimi is the driving
                                     force behind Keboon, a platform dedicated to connecting home growers and producers
                                     with their neighbors and consumers. With a deep commitment to leveraging technology
@@ -340,52 +340,6 @@
                                     technology, we can empower individuals to contribute to a healthier planet and a
                                     more connected society.</p>
                             </div>
-                        </div>
-                        <div class="col-lg-6">
-                            <div class="team-member">
-                                <img class="mx-auto rounded-circle" src="assets/img/team/sherman_foo.jpg"
-                                    alt="Sherman Foo" />
-                                <h5>Sherman Foo</h5>
-                                <p class="text-muted">Advisor</p>
-                                <p style="text-align: justify;">Since 2007, Sherman has transitioned from a regional MNC role into the startup ecosystem, co-founding a globally recognized portable audio innovation that grew from a bootstrap venture to $30 million in revenue, with a presence in over 100 countries. Forbes later valued the company at $1 billion. Over the years, Sherman has become a seasoned entrepreneur and managing partner across multiple industries, including digital tech and e-commerce.
-
-                                    With his expertise in scaling ventures, Sherman has guided companies through various stages of growth, IPO development, and digital transformation. His experience spans consumer services, F&B, and tech, positioning him as an ideal advisor for Keboon’s marketplace, which aims to connect local home growers with nearby consumers. Since 2016, he has been a trusted board member for multiple ventures, and as a published author and business consultant, Sherman brings invaluable insights to help Keboon grow, particularly in fostering community-driven economies and supporting local producers.
-                                    
-                                    Sherman’s entrepreneurial track record, award-winning strategies, and involvement with digital platforms make him a key asset in scaling Keboon into a transformative marketplace for local and sustainable agriculture.</p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <section id="contact" class="page-section bg-light card-section">
-        <div class="container">
-            <div class="card shadow">
-                <div class="card-body">
-                    <div class="row justify-content-center">
-                        <div class="col-md-8 col-lg-6">
-                            <h3 class="card-title text-center">Send Us a Message</h3>
-                            <form id="contactForm" action="https://formspree.io/f/xzzpopkr" method="POST">
-                                <div class="form-group mb-3">
-                                    <input class="form-control" type="text" placeholder="Your Name *"
-                                        required="required" name="name" />
-                                </div>
-                                <div class="form-group mb-3">
-                                    <input class="form-control" type="email" placeholder="Your Email *"
-                                        required="required" name="email" />
-                                </div>
-                                <div class="form-group mb-3">
-                                    <textarea class="form-control" placeholder="Your Message *" required="required"
-                                        name="message"></textarea>
-                                </div>
-                                <div class="text-center">
-                                    <button class="btn btn-primary btn-s text-uppercase" type="submit">
-                                        <i class="fas fa-paper-plane me-2"></i>Send Message
-                                    </button>
-                                </div>
-                            </form>
                         </div>
                     </div>
                 </div>
