--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="Keboon - Connecting Neighbours, Sharing Freshness" />
     <meta name="author" content="Keboon" />
     <title>Keboon - Local Produce Marketplace</title>
-    <link rel="icon" type="image/png" href="assets/img/keboon-logo-2.png" />
+    <link rel="icon" type="image/png" href="assets/img/ICN-LOGO-1.png" />
     <script src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css" />
     <link href="https://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700" rel="stylesheet" type="text/css" />
