--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             border-radius: 50%;
             position: absolute;
             display: flex;
-            justify-content: center;
+            justify-content: baseline;
             align-items: center;
             color: white;
             font-weight: bold;
