--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
             </div>
             <div class="col-md-6">
                 <h4 class="mb-3">What is Keboon?</h4>
-                <p>Keboon is an innovative mobile application designed to transform the way local communities interact with their food systems. By connecting home gardeners, urban farmers, and eco-conscious consumers, Keboon creates a vibrant marketplace for fresh, locally-grown produce.</p>
+                <p>Keboon is an innovative mobile and web application designed to transform the way local communities interact with their food systems. By connecting home gardeners, urban farmers, and eco-conscious consumers, Keboon creates a vibrant marketplace for fresh, locally-grown produce.</p>
                 <p>Our platform addresses the challenges of food waste and disconnected communities by providing an easy-to-use interface for sharing, selling, and purchasing excess homegrown produce. With Keboon, we're not just building an app – we're cultivating a movement towards sustainable, community-centered food practices.</p>
             </div>
         </div>
